@@ -209,6 +209,12 @@ wxToggleButtonPtr = wx._controls.ToggleButtonPtr
 wxPreToggleButton = wx._controls.PreToggleButton
 wxToggleButton_GetClassDefaultAttributes = wx._controls.ToggleButton_GetClassDefaultAttributes
 wxNotebookNameStr = wx._controls.NotebookNameStr
+wxBK_DEFAULT = wx._controls.BK_DEFAULT
+wxBK_TOP = wx._controls.BK_TOP
+wxBK_BOTTOM = wx._controls.BK_BOTTOM
+wxBK_LEFT = wx._controls.BK_LEFT
+wxBK_RIGHT = wx._controls.BK_RIGHT
+wxBK_ALIGN_MASK = wx._controls.BK_ALIGN_MASK
 wxBookCtrlBase = wx._controls.BookCtrlBase
 wxBookCtrlBasePtr = wx._controls.BookCtrlBasePtr
 wxBookCtrlBase_GetClassDefaultAttributes = wx._controls.BookCtrlBase_GetClassDefaultAttributes
@@ -259,6 +265,22 @@ wxChoicebookEvent = wx._controls.ChoicebookEvent
 wxChoicebookEventPtr = wx._controls.ChoicebookEventPtr
 wxEVT_COMMAND_CHOICEBOOK_PAGE_CHANGED = wx._controls.wxEVT_COMMAND_CHOICEBOOK_PAGE_CHANGED
 wxEVT_COMMAND_CHOICEBOOK_PAGE_CHANGING = wx._controls.wxEVT_COMMAND_CHOICEBOOK_PAGE_CHANGING
+wxTreebook = wx._controls.Treebook
+wxTreebookPtr = wx._controls.TreebookPtr
+wxPreTreebook = wx._controls.PreTreebook
+wxTreebookEvent = wx._controls.TreebookEvent
+wxTreebookEventPtr = wx._controls.TreebookEventPtr
+wxEVT_COMMAND_TREEBOOK_PAGE_CHANGED = wx._controls.wxEVT_COMMAND_TREEBOOK_PAGE_CHANGED
+wxEVT_COMMAND_TREEBOOK_PAGE_CHANGING = wx._controls.wxEVT_COMMAND_TREEBOOK_PAGE_CHANGING
+wxEVT_COMMAND_TREEBOOK_NODE_COLLAPSED = wx._controls.wxEVT_COMMAND_TREEBOOK_NODE_COLLAPSED
+wxEVT_COMMAND_TREEBOOK_NODE_EXPANDED = wx._controls.wxEVT_COMMAND_TREEBOOK_NODE_EXPANDED
+wxToolbook = wx._controls.Toolbook
+wxToolbookPtr = wx._controls.ToolbookPtr
+wxPreToolbook = wx._controls.PreToolbook
+wxToolbookEvent = wx._controls.ToolbookEvent
+wxToolbookEventPtr = wx._controls.ToolbookEventPtr
+wxEVT_COMMAND_TOOLBOOK_PAGE_CHANGED = wx._controls.wxEVT_COMMAND_TOOLBOOK_PAGE_CHANGED
+wxEVT_COMMAND_TOOLBOOK_PAGE_CHANGING = wx._controls.wxEVT_COMMAND_TOOLBOOK_PAGE_CHANGING
 wxTOOL_STYLE_BUTTON = wx._controls.TOOL_STYLE_BUTTON
 wxTOOL_STYLE_SEPARATOR = wx._controls.TOOL_STYLE_SEPARATOR
 wxTOOL_STYLE_CONTROL = wx._controls.TOOL_STYLE_CONTROL
